package deepdive;

option java_package = "org.deepdive.serialization";
option java_outer_classname = "FactorGraphProtos";

message Weight {
  required sint64 id = 1;
  optional double initialValue = 2 [default = 0.0];
  required bool isFixed = 3;
  optional string description = 4;  
}

message Variable {
    
  enum VariableDataType {
    BOOLEAN = 0;
  }

  required uint64 id = 1;
  optional double initialValue = 2;
  required VariableDataType dataType = 3;

}

message Factor {
  
  enum FactorFunctionType {
    IMPLY = 0;
    OR = 1;
    AND = 2;
    EQUAL = 3;
    ISTRUE = 4;
  }

  required uint64 id = 1;
  required uint64 weightId = 2;
  required FactorFunctionType factorFunction = 3;

}

message GraphEdge {
  
  required uint64 variableId = 1;
  required uint64 factorId = 2;
  required uint64 position = 3;
  optional bool isPositive = 4 [default = true];

}

message FactorGraph {
  repeated Weight weight = 1; 
  repeated Variable variable = 2; 
  repeated Factor factor = 3;
  repeated GraphEdge edge = 4;
}